# bru_profe

./: .gitignore  README.md
Cursito de desarrollo de software/20220903/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  (+13 more)
Cursito de desarrollo de software/20220910/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  13  14  15  16  17  18  19  (+88 more)
Cursito de desarrollo de software/20220917/: 0  1  10  100  101  102  103  104  105  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  (+66 more)
Cursito de desarrollo de software/20220924/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  (+115 more)
Cursito de desarrollo de software/20220924/ejercicios/: verdulería.py
Cursito de desarrollo de software/20220930/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  (+27 more)
helpers/: pyproject.toml  renderer.py
