[tool.poetry]
name = "helpers"
version = "0.1.0"
description = ""
authors = ["bru <brunom.ronchi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pathlib = "^1.0.1"
CairoSVG = "^2.5.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
